--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,10 +4,28 @@
         <listener-class>com.sun.xml.ws.transport.http.servlet.WSServletContextListener</listener-class>
     </listener>
     <servlet>
+        <servlet-name>SVR_FACTURAVENTA</servlet-name>
+        <servlet-class>com.sun.xml.ws.transport.http.servlet.WSServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet>
+        <servlet-name>SRV_DETALLEFACTURAVENTA</servlet-name>
+        <servlet-class>com.sun.xml.ws.transport.http.servlet.WSServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet>
         <servlet-name>SVR_CLIENTES</servlet-name>
         <servlet-class>com.sun.xml.ws.transport.http.servlet.WSServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
+    <servlet-mapping>
+        <servlet-name>SVR_FACTURAVENTA</servlet-name>
+        <url-pattern>/SVR_FACTURAVENTA</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SRV_DETALLEFACTURAVENTA</servlet-name>
+        <url-pattern>/SRV_DETALLEFACTURAVENTA</url-pattern>
+    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>SVR_CLIENTES</servlet-name>
         <url-pattern>/SVR_CLIENTES</url-pattern>
